--- a/force-app/main/default/classes/AH_SCIM_UserSyncCalloutbadRequests_Mock.cls
+++ b/force-app/main/default/classes/AH_SCIM_UserSyncCalloutbadRequests_Mock.cls
@@ -4,7 +4,7 @@ Author          : Ganesh Bora
 Created Date    : 25/01/2022
 Last Mod Date   : 25/01/2022
 Last Mod By     : Ganesh Bora
-NICC Reference  : 
+NICC Reference  : NICC-056411
 Description		: Mock Class for Handling SCIM User Sync Http Callout Bad Requsts 
      			: 
 *************************************************************************************************************************/
