--- a/force-app/main/default/classes/AH_SCIM_UserSyncCallout_Mock.cls
+++ b/force-app/main/default/classes/AH_SCIM_UserSyncCallout_Mock.cls
@@ -4,7 +4,7 @@ Author          : Ganesh Bora
 Created Date    : 25/01/2022
 Last Mod Date   : 
 Last Mod By     : Ganesh Bora
-NICC Reference  : 
+NICC Reference  : NICC-056411
 Description		: Mock Http Callout for SCIM user sync test
      			: 
 *************************************************************************************************************************/
