--- a/force-app/main/default/classes/AH_SCIM_UserSyncCallout_Test.cls
+++ b/force-app/main/default/classes/AH_SCIM_UserSyncCallout_Test.cls
@@ -4,7 +4,7 @@ Author          : Ganesh Bora
 Created Date    : 12/01/2022
 Last Mod Date   : 12/01/2022
 Last Mod By     : Ganesh Bora
-NICC Reference  : 
+NICC Reference  : NICC-056411
 Description     : Test class for AH_SCIM_UserSyncCallout_Test.cls 
                 : 
                 : 
