--- a/force-app/main/default/classes/DTS_Integration_Logger_Test.cls
+++ b/force-app/main/default/classes/DTS_Integration_Logger_Test.cls
@@ -4,7 +4,7 @@ Author          : Ganesh Bora
 Created Date    : 02/17/2022
 Last Mod Date   : 02/17/2022
 Last Mod By     : Ganesh Bora 
-NICC Reference  : NICC-00XXXX
+NICC Reference  : NICC-056411
 Description     : Test class for DTS_Integration_Logger
                 : 
                 : 
