W-028387 Valamis SCIM API integration for User Sync-up

--- a/force-app/main/default/classes/AH_SCIM_UserSyncCallout_Test.cls
+++ b/force-app/main/default/classes/AH_SCIM_UserSyncCallout_Test.cls
@@ -17,7 +17,7 @@ public class AH_SCIM_UserSyncCallout_Test {
     	// CREATE TEST PARENT ACCOUNT RECORD
         Account a = NI_TestClassData.createTestAccount(1);
         insert a;
-        List<Contact> listContact = new List<Contact>;
+        List<Contact> listContact = new List<Contact>();
         for (Integer i = 0; i < 5; i++) {
             string firstName = 'duck'+i;
         	string lastName = 'donald';
@@ -28,11 +28,12 @@ public class AH_SCIM_UserSyncCallout_Test {
             cnt.FirstName = firstName;
             cnt.LastName = lastName;
             cnt.Email = email;
+             
             listContact.add(cnt);
         }
         insert listContact;
         
-        List<User> listUser = new List<User>; 
+        List<User> listUser = new List<User>(); 
         for (Integer i = 0; i < 5; i++) {
             string firstName = 'duck'+i;
         	string lastName = 'donald';
@@ -40,7 +41,7 @@ public class AH_SCIM_UserSyncCallout_Test {
             
             // CREATE A TEST USER WITH THE AH Customer Community Plus Login User PROFILE
             User u = NI_TestClassData.createTestUser(1, 'AH Customer Community Plus Login User');
-            u.ContactId = listContact[i];
+            u.ContactId = listContact.get(i).id;
             u.FirstName = firstName;
             u.LastName = lastName;
             u.Email = email;
